@@ -4,59 +4,112 @@ import com.example.big_bike_auto.common.JsonUtil;
 import com.fasterxml.jackson.core.type.TypeReference;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.concurrent.locks.ReentrantLock;
 
 /**
- * CustomerRepository (JSON) จัดเก็บข้อมูลลูกค้าในไฟล์ data/customers.json
- * - ใช้ JsonUtil.mapper() เพื่อความสม่ำเสมอ
- * - ปลอดภัยจากไฟล์หาย: สร้างโฟลเดอร์/ไฟล์ให้อัตโนมัติ
- * - ทนทานกับไฟล์ว่าง/ข้อมูลเสีย: คืนค่าเป็นลิสต์ว่าง
- * - Thread-safe (synchronized) ระหว่างการเขียนไฟล์
+ * เก็บ/อ่านจาก data/customers.json
+ * - เขียนแบบ atomic (.tmp → replace)
+ * - มี updateRepair(customerId, repairInfo)
  */
 public class CustomerRepository {
-    private final Path dataDir = Path.of("data");
-    private final Path dataFile = dataDir.resolve("customers.json");
 
-    /** โหลดลูกค้าทั้งหมด (ถ้าไฟล์ไม่มี/ว่าง -> [] ) */
-    public List<Customer> findAll() throws IOException {
-        ensureFile();
+    private static final Path DATA_DIR  = Path.of("data");
+    private static final Path FILE_PATH = DATA_DIR.resolve("customers.json");
+    private static final ReentrantLock WRITE_LOCK = new ReentrantLock();
+
+    public CustomerRepository() {
         try {
-            byte[] bytes = Files.readAllBytes(dataFile);
-            if (bytes.length == 0) return new ArrayList<>();
-            return JsonUtil.mapper().readValue(bytes, new TypeReference<List<Customer>>() {});
-        } catch (Exception ex) {
-            // ถ้า parse พัง ให้คืนลิสต์ว่างแทน
-            return new ArrayList<>();
+            if (!Files.exists(DATA_DIR)) Files.createDirectories(DATA_DIR);
+            if (!Files.exists(FILE_PATH)) Files.writeString(FILE_PATH, "[]", StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            throw new RuntimeException("Cannot initialize data dir", e);
         }
     }
 
-    /** บันทึกลูกค้าใหม่ (append) */
-    public synchronized void append(Customer c) throws IOException {
-        List<Customer> all = findAll();
-        all.add(c);
-        writeAll(all);
+    public List<Customer> findAll() {
+        try {
+            String json = Files.readString(FILE_PATH, StandardCharsets.UTF_8);
+            List<Customer> list = JsonUtil.mapper().readValue(json, new TypeReference<List<Customer>>() {});
+            return list != null ? list : Collections.emptyList();
+        } catch (IOException e) {
+            return Collections.emptyList();
+        }
     }
 
-    /** คืนลูกค้าล่าสุด N ราย (เรียงตาม registeredAt ใหม่→เก่า) */
-    public List<Customer> findRecent(int limit) throws IOException {
-        List<Customer> all = findAll();
-        all.sort(Comparator.comparing(Customer::getRegisteredAt, Comparator.nullsLast(Comparator.naturalOrder())).reversed());
-        if (all.size() <= limit) return all;
-        return new ArrayList<>(all.subList(0, limit));
+    public Optional<Customer> findById(String id) {
+        if (id == null || id.isBlank()) return Optional.empty();
+        return findAll().stream().filter(c -> id.equals(c.getId())).findFirst();
     }
 
-    private void writeAll(List<Customer> all) throws IOException {
-        ensureFile();
-        byte[] bytes = JsonUtil.mapper().writeValueAsBytes(all);
-        Files.writeString(dataFile, new String(bytes));
+    /** upsert = เพิ่มใหม่ถ้าไม่มี / แทนที่ถ้ามี id ซ้ำ */
+    public void upsert(Customer c) {
+        if (c.getId() == null || c.getId().isBlank())
+            throw new IllegalArgumentException("Customer.id is required");
+
+        WRITE_LOCK.lock();
+        try {
+            List<Customer> list = new ArrayList<>(findAll());
+            boolean replaced = false;
+            for (int i = 0; i < list.size(); i++) {
+                if (Objects.equals(list.get(i).getId(), c.getId())) {
+                    list.set(i, c);
+                    replaced = true;
+                    break;
+                }
+            }
+            if (!replaced) list.add(c);
+            writeAll(list);
+        } finally {
+            WRITE_LOCK.unlock();
+        }
     }
 
-    private void ensureFile() throws IOException {
-        if (!Files.exists(dataDir)) Files.createDirectories(dataDir);
-        if (!Files.exists(dataFile)) Files.writeString(dataFile, "[]");
+    /** อัปเดตเฉพาะ repair ของลูกค้า + timestamp + (ออปชัน) สถานะรวม */
+    public void updateRepair(String customerId, Customer.RepairInfo repair, Customer.RepairStatus newStatusOrNull) {
+        WRITE_LOCK.lock();
+        try {
+            List<Customer> list = new ArrayList<>(findAll());
+            boolean found = false;
+            for (int i = 0; i < list.size(); i++) {
+                Customer c = list.get(i);
+                if (Objects.equals(c.getId(), customerId)) {
+                    if (repair != null) {
+                        repair.setLastUpdated(LocalDateTime.now());
+                        // คำนวณ grandTotal ตรงนี้ ถ้าไม่ได้ตั้งมาก่อน
+                        if (repair.getGrandTotal() == null && repair.getParts() != null) {
+                            double sum = repair.getParts().stream()
+                                    .mapToDouble(p -> (p.getQuantity() == null ? 0 : p.getQuantity()) *
+                                            (p.getUnitPrice() == null ? 0 : p.getUnitPrice()))
+                                    .sum();
+                            repair.setGrandTotal(sum);
+                        }
+                    }
+                    c.setRepair(repair);
+                    if (newStatusOrNull != null) c.setStatus(newStatusOrNull);
+                    list.set(i, c);
+                    found = true;
+                    break;
+                }
+            }
+            if (!found) throw new IllegalArgumentException("Customer not found: " + customerId);
+            writeAll(list);
+        } finally {
+            WRITE_LOCK.unlock();
+        }
+    }
+
+    private void writeAll(List<Customer> list) {
+        try {
+            String out = JsonUtil.mapper().writerWithDefaultPrettyPrinter().writeValueAsString(list);
+            Path tmp = FILE_PATH.resolveSibling(FILE_PATH.getFileName() + ".tmp");
+            Files.writeString(tmp, out, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+            Files.move(tmp, FILE_PATH, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
+        } catch (IOException e) {
+            throw new RuntimeException("Cannot write customers.json", e);
+        }
     }
 }
